fixed overflow in client file browser

--- a/cmd/GoNotesClient/client.css
+++ b/cmd/GoNotesClient/client.css
@@ -82,6 +82,7 @@ textarea {
     background-color: rgba(255,255,255,0);
     padding: 3em 1em;
     z-index: -1;
+    overflow: scroll;
 }
 
 #fileBrowser ul {
